--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.argha.dev/"
+baseURL = "https://argha-c.github.io/"
 languageCode = "en-us"
 title = "Argha C"
 theme = "etch"
