--- a/config.toml
+++ b/config.toml
@@ -17,14 +17,20 @@ url = "/posts"
 weight = 2
 
 [[menu.main]]
+name = "Articles"
+url = "/articles"
+weight = 3
+
+
+[[menu.main]]
 name = "Tags"
 url = "/tags"
-weight = 3
+weight = 4
 
 [[menu.main]]
 name = "About"
 url = "/about"
-weight = 4
+weight = 5
 
 
 # Social Tags
