--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://www.argha.dev/"
 languageCode = "en-us"
 title = "Argha C"
-theme = "smol"
+theme = "ezhil"
 copyright = "© Argha C"
 
 # Main menu Items
